--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
 						<br>
 						<br>
-			            <h2>A Data Analyst</h2>
+			            <h2>A Business Inteligence </h2>
 						<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 5 years of experience</h2> -->
 						<!-- <br> -->
 			            <p><a href="https://www.linkedin.com/in/ajit-rajput-1645a9201/" class="btn btn-primary py-3 px-4">LinkedIn</a> 
@@ -325,7 +325,7 @@
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
 						<span class="date">May,2022-Present</span>
-						<h2>Data Analyst</h2>
+						<h2>Business Intelligence Developer</h2>
 						<span class="position">Gramophone</span>
 						<p class="mt-4">Gramophone, a leading Agritech company and Number 1 startup of central India. 
 							<ul>
@@ -342,7 +342,7 @@
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
 						<span class="date">2020-2022</span>
-						<h2>Mis Analyst</h2>
+						<h2>Data Analyst</h2>
 						<span class="position">Plantix</span>
 						<p class="mt-4">Plantix is known for its Image Detection App which helps farmer to Advanced their techniques of Agriculture. 
 							<ul>
