--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 									<div class="col-sm-6 col-md-7">
 									  <div class="about-info">
 										<p><span class="title-s">Name: </span> <span>Ajit Rajput</span></p>
-										<p><span class="title-s">Job Role: </span> <span>Business Intelligence Developer</span></p>
+										<p><span class="title-s">Job Role: </span> <span>Data Analyst</span></p>
 										<p><span class="title-s">Experience: </span> <span>7+ Years</span></p>
 										<p><span class="title-s">Address: </span> <span>Indore, India</span></p>
 									  </div>
